--- a/digartgal/package.json
+++ b/digartgal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "digartgal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.2.2"
+    "vite": "^7.2.4"
   }
 }
